# lab5-oop24-TokarIvan141

./: CMakeLists.txt  main.cpp
Task 3/: GraduateStudent.cpp  GraduateStudent.h
Task1/: Person.cpp  Person.h  Student.cpp  Student.h
Task2/: ButtonWindow.cpp  ButtonWindow.h  TitledWindow.cpp  TitledWindow.h  Window.cpp  Window.h
